# Blender-CV-Utils

./: LICENSE  README.md  Untitled.ipynb  data generation demo.ipynb  inspect generated data.ipynb  main.py  pyproject.toml
additional_scripts/: create_test_scene.py
blender_cv_utils/: __init__.py  projection_camera.py  renderer.py  trackable.py
